Support both PWM polarities for all F&S boards
We have implemented a flag called "keep-power" to support both PWM
polarities in a correct way. Enable it for all PWM´s.

--- a/arch/arm/boot/dts/armstonea9qdl.dtsi
+++ b/arch/arm/boot/dts/armstonea9qdl.dtsi
@@ -1061,6 +1061,7 @@
 &pwm1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_pwm1_1>;
+	keep-power;		/* Necessary if PWM is inverted */
 	status = "okay";
 };
 
@@ -1068,6 +1069,7 @@
 &pwm2 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_pwm2_1>;
+	keep-power;		/* Necessary if PWM is inverted */
 	status = "okay";
 };
 
@@ -1076,6 +1078,7 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_pwm3_1>;
 	#pwm-cells = <3>;
+	keep-power;		/* Necessary if PWM is inverted */
 	status = "okay";
 };
 
@@ -1083,6 +1086,7 @@
 &pwm4 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_pwm4_1>;
+	keep-power;		/* Necessary if PWM is inverted */
 	status = "okay";
 };
 
