--- a/arch/arm/boot/dts/netdcua9qdl.dtsi
+++ b/arch/arm/boot/dts/netdcua9qdl.dtsi
@@ -769,12 +769,14 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_pwm3>;
 	#pwm-cells = <3>;
+	keep-power;		/* Necessary if PWM is inverted */
 	status = "okay";
 };
 
 &pwm4 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_pwm4>;
+	keep-power;		/* Necessary if PWM is inverted */
 	status = "okay";
 };
 
