--- a/arch/arm/boot/dts/picocom1.2.dts
+++ b/arch/arm/boot/dts/picocom1.2.dts
@@ -384,6 +384,7 @@ chosen {
 &pwm1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_pwm1>;
+	keep-power;		/* Necessary if PWM is inverted */
 	status = "okay";
 };
 #endif
@@ -393,6 +394,7 @@ chosen {
 &pwm4 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_pwm4>;
+	keep-power;		/* Necessary if PWM is inverted */
 	status = "okay";
 };
 #endif
@@ -402,6 +404,7 @@ chosen {
 &pwm2 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_pwm2>;
+	keep-power;		/* Necessary if PWM is inverted */
 	status = "okay";
 };
 #endif
@@ -411,6 +414,7 @@ chosen {
 &pwm3 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_pwm3>;
+	keep-power;		/* Necessary if PWM is inverted */
 	status = "okay";
 };
 #endif
