--- a/arch/arm/boot/dts/picomoda9qdl.dtsi
+++ b/arch/arm/boot/dts/picomoda9qdl.dtsi
@@ -1003,6 +1003,7 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_pwm3_1>;
 	#pwm-cells = <3>;
+	keep-power;		/* Necessary if PWM is inverted */
 	status = "okay";
 };
 
