--- a/arch/arm/boot/dts/armstonea9r2qdl.dtsi
+++ b/arch/arm/boot/dts/armstonea9r2qdl.dtsi
@@ -877,12 +877,14 @@
 &pwm1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_pwm1_1>;
+	keep-power;		/* Necessary if PWM is inverted */
 	status = "okay";
 };
 /* PWM_C (Pin 32) */
 &pwm2 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_pwm2_1>;
+	keep-power;		/* Necessary if PWM is inverted */
 	status = "okay";
 };
 
@@ -891,6 +893,7 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_pwm3_1>;
 	#pwm-cells = <3>;
+	keep-power;		/* Necessary if PWM is inverted */
 	status = "okay";
 };
 
@@ -898,6 +901,7 @@
 &pwm4 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_pwm4_1>;
+	keep-power;		/* Necessary if PWM is inverted */
 	status = "okay";
 };
 
