Add support for vc600 device-tree
Add support for VISUCONNECT600. The vc600 is based on PicoCoreMX6SX. So
the device-tree vc600.dts is created from picocoremx6sx.dts. We extend
the fsimx6sx_defconfig to support TI-ADS1015 chip and RTC PCF85263in our
default fsimx6sx_defconfig. These two chips are mounted on vc600.

--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -484,6 +484,7 @@ dtb-$(CONFIG_SOC_IMX6SX) += \
 	imx6sx-sdb-lcdif1.dtb \
 	efusa9x.dtb \
 	picocoremx6sx.dtb \
+	vc600.dtb \
 	bema9x.dtb \
 	picocoma9x.dtb \
 	cont1.dtb \
