Update config and device tree for efusMX8X
Device tree fsl-imx8dx.dtsi from Freescale must be updated to support
lpspi1 and lpspi3.

--- a/arch/arm64/configs/fsimx8x_defconfig
+++ b/arch/arm64/configs/fsimx8x_defconfig
@@ -1,3 +1,6 @@
+CONFIG_CROSS_COMPILE="arm-linux-"
+CONFIG_LOCALVERSION="-F+S"
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_SYSVIPC=y
 CONFIG_POSIX_MQUEUE=y
 CONFIG_AUDIT=y
@@ -273,6 +276,8 @@ CONFIG_USB_NET_MCS7830=m
 CONFIG_BRCMFMAC=m
 CONFIG_BRCMFMAC_PCIE=y
 CONFIG_HOSTAP=y
+CONFIG_MWIFIEX=m
+CONFIG_MWIFIEX_PCIE=m
 CONFIG_RTL_CARDS=m
 # CONFIG_WLAN_VENDOR_TI is not set
 CONFIG_XEN_NETDEV_BACKEND=m
@@ -285,6 +290,8 @@ CONFIG_KEYBOARD_IMX_SC_PWRKEY=y
 CONFIG_KEYBOARD_CROS_EC=y
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C=y
+CONFIG_TOUCHSCREEN_FTS=y
+CONFIG_TOUCHSCREEN_FTS_DIRECTORY="focaltech_touch"
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_PM8941_PWRKEY=y
 CONFIG_INPUT_HISI_POWERKEY=y
@@ -321,6 +328,7 @@ CONFIG_SERIAL_FSL_LPUART=y
 CONFIG_SERIAL_FSL_LPUART_CONSOLE=y
 CONFIG_SERIAL_MVEBU_UART=y
 CONFIG_SERIAL_DEV_BUS=y
+CONFIG_BDINFO=y
 CONFIG_SERIAL_DEV_CTRL_TTYPORT=y
 CONFIG_VIRTIO_CONSOLE=y
 CONFIG_I2C_CHARDEV=y
@@ -517,6 +525,7 @@ CONFIG_SND_SOC=y
 CONFIG_SND_BCM2835_SOC_I2S=m
 CONFIG_SND_SOC_FSL_ACM=y
 CONFIG_SND_IMX_SOC=y
+CONFIG_SND_SOC_FSL_SAI=y
 CONFIG_SND_SOC_IMX_AK4458=y
 CONFIG_SND_SOC_IMX_AK5558=y
 CONFIG_SND_SOC_IMX_AK4497=y
@@ -526,6 +535,7 @@ CONFIG_SND_SOC_IMX_CS42888=y
 CONFIG_SND_SOC_IMX_WM8962=y
 CONFIG_SND_SOC_IMX_MICFIL=y
 CONFIG_SND_SOC_IMX_RPMSG=y
+CONFIG_SND_SOC_IMX_SGTL5000=y
 CONFIG_SND_SOC_IMX_MQS=y
 CONFIG_SND_SOC_IMX_SPDIF=y
 CONFIG_SND_SOC_IMX_AMIX=y
@@ -534,6 +544,7 @@ CONFIG_SND_SOC_IMX_DSP=y
 CONFIG_SND_SOC_SAMSUNG=y
 CONFIG_SND_SOC_RCAR=y
 CONFIG_SND_SOC_AK4613=y
+CONFIG_SND_SOC_SGTL5000=y
 CONFIG_SND_SIMPLE_CARD=y
 CONFIG_HID_A4TECH=y
 CONFIG_HID_APPLE=y
