--- a/arch/arm64/boot/dts/freescale/fsl-imx8dx.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8dx.dtsi
@@ -1033,6 +1033,25 @@
 				reg = <SC_R_SPI_1>;
 				#power-domain-cells = <0>;
 				power-domains = <&pd_dma>;
+				#address-cells = <1>;
+				#size-cells = <0>;
+				wakeup-irq = <337>;
+
+				pd_dma2_chan2: PD_LPSPI1_RX {
+					reg = <SC_R_DMA_2_CH2>;
+					power-domains =<&pd_dma_lpspi1>;
+					#power-domain-cells = <0>;
+					#address-cells = <1>;
+					#size-cells = <0>;
+
+					pd_dma2_chan3: PD_LPSPI1_TX {
+						reg = <SC_R_DMA_2_CH3>;
+						power-domains =<&pd_dma2_chan2>;
+						#power-domain-cells = <0>;
+						#address-cells = <1>;
+						#size-cells = <0>;
+					};
+				};
 			};
 			pd_dma_lpspi2: PD_DMA_SPI_2 {
 				reg = <SC_R_SPI_2>;
@@ -1062,6 +1081,25 @@
 				reg = <SC_R_SPI_3>;
 				#power-domain-cells = <0>;
 				power-domains = <&pd_dma>;
+				#address-cells = <1>;
+				#size-cells = <0>;
+				wakeup-irq = <339>;
+
+				pd_dma2_chan6: PD_LPSPI3_RX {
+					reg = <SC_R_DMA_2_CH6>;
+					power-domains =<&pd_dma_lpspi3>;
+					#power-domain-cells = <0>;
+					#address-cells = <1>;
+					#size-cells = <0>;
+
+					pd_dma2_chan7: PD_LPSPI3_TX {
+						reg = <SC_R_DMA_2_CH7>;
+						power-domains =<&pd_dma2_chan6>;
+						#power-domain-cells = <0>;
+						#address-cells = <1>;
+						#size-cells = <0>;
+					};
+				};
 			};
 			pd_dma_pwm0: PD_DMA_PWM_0 {
 				reg = <SC_R_LCD_0_PWM_0>;
@@ -2763,6 +2801,22 @@
 		status = "disabled";
 	};
 
+	lpspi1: lpspi@5a010000 {
+		compatible = "fsl,imx7ulp-spi";
+		reg = <0x0 0x5a010000 0x0 0x10000>;
+		interrupts = <GIC_SPI 217 IRQ_TYPE_LEVEL_HIGH>;
+		interrupt-parent = <&gic>;
+		clocks = <&clk IMX8QXP_SPI1_CLK>,
+			 <&clk IMX8QXP_SPI1_IPG_CLK>;
+		clock-names = "per", "ipg";
+		assigned-clocks = <&clk IMX8QXP_SPI1_CLK>;
+		assigned-clock-rates = <20000000>;
+		power-domains = <&pd_dma2_chan3>;
+		dma-names = "tx","rx";
+		dmas = <&edma2 3 0 0>, <&edma2 2 0 1>;
+		status = "disabled";
+	};
+
 	lpspi2: lpspi@5a020000 {
 		compatible = "fsl,imx7ulp-spi";
 		reg = <0x0 0x5a020000 0x0 0x10000>;
@@ -2776,6 +2830,22 @@
 		power-domains = <&pd_dma2_chan5>;
 		dma-names = "tx","rx";
 		dmas = <&edma2 5 0 0>, <&edma2 4 0 1>;
+		status = "disabled";
+	};
+
+	lpspi3: lpspi@5a030000 {
+		compatible = "fsl,imx7ulp-spi";
+		reg = <0x0 0x5a030000 0x0 0x10000>;
+		interrupts = <GIC_SPI 219 IRQ_TYPE_LEVEL_HIGH>;
+		interrupt-parent = <&gic>;
+		clocks = <&clk IMX8QXP_SPI3_CLK>,
+			 <&clk IMX8QXP_SPI3_IPG_CLK>;
+		clock-names = "per", "ipg";
+		assigned-clocks = <&clk IMX8QXP_SPI3_CLK>;
+		assigned-clock-rates = <20000000>;
+		power-domains = <&pd_dma2_chan7>;
+		dma-names = "tx","rx";
+		dmas = <&edma2 7 0 0>, <&edma2 6 0 1>;
 		status = "disabled";
 	};
 
