--- a/arch/arm64/boot/dts/F+S/picocoremx8mm.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mm.dts
@@ -61,31 +61,24 @@
 //#define CONFIG_PICOCOREMX8MM_PWM_A
 //#define CONFIG_PICOCOREMX8MM_BL_CTRL
 
-/* SKIT: J9 */
+/* UART_A - UART1 */
 #define CONFIG_PICOCOREMX8MM_UART_A
-/* RTS/CTS are gpios so disable,
-   RTS/CTS are not connected on SKIT 
-*/
-//#define CONFIG_PICOCOREMX8MM_UART_A_RTSCTS
+#define CONFIG_PICOCOREMX8MM_UART_A_RTSCTS
 
+/* UART_B - UART2 */
 #define CONFIG_PICOCOREMX8MM_UART_B
-/* RTS/CTS are gpios so disable */
 #define CONFIG_PICOCOREMX8MM_UART_B_RTSCTS
 
-/* SKIT GPIO: UART_D_TXD pin 13
-              UART_D_RXD pin 15
-   TODO: exeption if enabled
-*/
-//#define CONFIG_PICOCOREMX8MM_UART_C
+/* UART_C - UART4 */
+#define CONFIG_PICOCOREMX8MM_UART_C
 
-/* SKIT: J8 */
+/* UART_D - UART3 */
 #define CONFIG_PICOCOREMX8MM_UART_D
 
 #define CONFIG_PICOCOREMX8MM_SPI_A
 #define CONFIG_PICOCOREMX8MM_SPI_B
 
 /* Audio */
-//### TODO not tested yet:
 #define CONFIG_PICOCOREMX8MM_SGTL5000_AUDIO
 //#define CONFIG_PICOCOREMX8MM_AUDIO_2
 //#define CONFIG_PICOCOREMX8MM_AUDIO_3
@@ -136,12 +129,11 @@
 	bdinfo {
 		compatible = "bdinfo";
 		board_name = "picocoremx8mm";
-		login_tty  = "ttymxc1";
 	};
 
 	chosen {
-		bootargs = "console=ttymxc1,115200 earlycon=ec_imx6q,0x30890000,115200";
-		stdout-path = &uart2;
+		bootargs = "console=ttymxc0,115200 earlycon=ec_imx6q,0x30860000,115200";
+		stdout-path = &uart1;
 	};
 	
 	backlight_ldb {
@@ -349,7 +341,7 @@
 		pinctrl-0 = <&pinctrl_sgtl5000>;
 		reg = <0x0a>;
 		mono2both;
-		clocks = <&clk IMX8MM_CLK_SAI1_DIV>;
+		clocks = <&clk IMX8MM_CLK_SAI1_ROOT>;
 		VDDA-supply = <&reg_sgtl5000_vdda>;
 		VDDIO-supply = <&reg_sgtl5000_vddio>;
 		VDDD-supply = <&reg_sgtl5000_vddd>;
@@ -503,7 +495,7 @@
 		status = "okay";
 		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_csi_pwn>;
-		clocks = <&clk IMX8MM_CLK_CLKO1_DIV>;
+		clocks = <&clk IMX8MM_CLK_CLKO1>;
 		clock-names = "csi_mclk";
 		assigned-clock-rates = <0>, <24000000>;
 		csi_id = <0>;
@@ -562,10 +554,9 @@
 	#sound-dai-cells = <0>; 
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_sai1>;
-	assigned-clocks = <&clk IMX8MM_CLK_SAI1_SRC>,
-			<&clk IMX8MM_CLK_SAI1_ROOT>;
+	assigned-clocks = <&clk IMX8MM_CLK_SAI1>;
 	assigned-clock-parents = <&clk IMX8MM_AUDIO_PLL1_OUT>;
-	assigned-clock-rates = <0>, <24576000>;
+	assigned-clock-rates = <24576000>;
 
 	status = "okay";
 };
@@ -655,12 +646,11 @@
 	cs-gpios = <&gpio5 13 0>;
 	status = "okay";
 
-	spidev@0 {
-		#address-cells = <1>;
-		#size-cells = <1>;
-		compatible = "linux,spidev";
-		spi-max-frequency = <20000000>;
-		reg = <0>;
+        spidev: spidev@1 {
+	  compatible = "linux,spidev";
+	  spi-max-frequency = <20000000>;
+	  reg = <0>;
+	  status = "okay";
 	};
 };
 #endif
@@ -680,7 +670,7 @@
 &uart1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart1>;
-	assigned-clocks = <&clk IMX8MM_CLK_UART1_SRC>;
+	assigned-clocks = <&clk IMX8MM_CLK_UART1>;
 	assigned-clock-parents = <&clk IMX8MM_SYS_PLL1_80M>;
 #ifdef CONFIG_PICOCOREMX8MM_UART_A_RTSCTS
 	fsl,uart-has-rtscts;
@@ -704,7 +694,7 @@
 &uart3 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart3>;
-	assigned-clocks = <&clk IMX8MM_CLK_UART3_SRC>;
+	assigned-clocks = <&clk IMX8MM_CLK_UART3>;
 	assigned-clock-parents = <&clk IMX8MM_SYS_PLL1_80M>;
 	status = "okay";
 };
@@ -714,7 +704,7 @@
 &uart4 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart4>;
-	assigned-clocks = <&clk IMX8MM_CLK_UART4_SRC>;
+	assigned-clocks = <&clk IMX8MM_CLK_UART4>;
 	assigned-clock-parents = <&clk IMX8MM_SYS_PLL1_80M>;
 	status = "okay";
 };
