--- a/arch/arm64/boot/dts/F+S/armstonemx8m.dtsi
+++ b/arch/arm64/boot/dts/F+S/armstonemx8m.dtsi
@@ -1,5 +1,5 @@
 /*
- * Copyright 2016 F&S Elektronik Systeme GmbH
+ * Copyright 2019 F&S Elektronik Systeme GmbH
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 as
@@ -187,6 +187,25 @@
 		default-on;
 	};
 #endif
+
+#ifdef CONFIG_ARMSTONEMX8M_SGTL5000_AUDIO
+	sound-sgtl5000 {
+		compatible = "fsl,imx-audio-sgtl5000";
+		cpu-dai = <&sai2>;
+		audio-codec = <&sgtl5000>;
+		model = "imx-sgtl5000";
+		audio-routing =
+			"LINE_IN", "Line In Jack",
+			"MIC_IN", "Mic Jack",
+		        "Line Out Jack", "LINE_OUT";
+	};
+#endif
+};
+
+
+&clk {
+	assigned-clocks = <&clk IMX8MQ_AUDIO_PLL1>, <&clk IMX8MQ_AUDIO_PLL2>;
+	assigned-clock-rates = <786432000>, <722534400>;
 };
 
 #ifdef CONFIG_ARMSTONEMX8M_ETH_A
@@ -277,12 +296,16 @@
 	sgtl5000: sgtl5000@0a {
 			compatible = "fsl,sgtl5000";
 			pinctrl-names = "default";
-			pinctrl-0 = <&pinctrl_audio>;
+			pinctrl-0 = <&pinctrl_audio_mclk>;
+#ifdef CONFIG_ARMSTONEMX8M_SGTL5000_AUDIO_MCLK_CLKO1
 			clocks = <&clk IMX8MQ_CLK_CLKO1>;
-			clock-names = "sys_mclk";
 			assigned-clocks = <&clk IMX8MQ_CLK_CLKO1>;
 			assigned-clock-parents = <&clk IMX8MQ_SYS2_PLL_200M>;
 			assigned-clock-rates = <27000000>;
+			clock-names = "sys_mclk";
+#else
+			clocks = <&clk IMX8MQ_CLK_SAI2>;
+#endif
 
 			reg = <0x0a>;
 			mono2both;
@@ -476,14 +499,11 @@
 	vmmc-supply = <&reg_wlan_on>;	/* VDD */
 	vqmmc-supply = <&reg_wlan_vmmc_1v8>; /* VDD_IO */
 #else
-	// vmmc-supply = <&reg_vref_3v3>;	/* VDD */
 	mmc-supply = <&reg_vmmc_1v8>;
 	cd-gpios = <&gpio2 12 GPIO_ACTIVE_LOW>;
-	//	vqmmc-supply = <&reg_vref_3v3>;	/* VDD_IO */
 	vqmmc-supply = <&reg_vmmc_1v8>;
 #endif
 
-	//	voltage-ranges = <3300 3300>;
 	//no-1-8-v;
 	keep-power-in-suspend;
 
@@ -568,6 +588,18 @@
 &pwm4 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_pwm4>;
+	status = "okay";
+};
+#endif
+
+#ifdef CONFIG_ARMSTONEMX8M_SGTL5000_AUDIO
+&sai2 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_sai2>;
+	
+	assigned-clocks = <&clk IMX8MQ_CLK_SAI2>;
+	assigned-clock-parents = <&clk IMX8MQ_AUDIO_PLL1_OUT>;
+	assigned-clock-rates = <24576000>;
 	status = "okay";
 };
 #endif
@@ -749,13 +781,26 @@
 			        /* TCPC_INTn */
 			        MX8MQ_IOMUXC_GPIO1_IO14_GPIO1_IO14	0x17059
 			        /* USB1_SS_SEL  */
-				    MX8MQ_IOMUXC_GPIO1_IO15_GPIO1_IO15	0x16
+				MX8MQ_IOMUXC_GPIO1_IO15_GPIO1_IO15	0x16
 			>;
 		};
 
-		pinctrl_audio: audiogrp {
+	       pinctrl_sai2: sai2grp {
 			fsl,pins = <
+				MX8MQ_IOMUXC_SAI2_TXFS_SAI2_TX_SYNC	0xd6
+				MX8MQ_IOMUXC_SAI2_TXC_SAI2_TX_BCLK	0xd6
+				MX8MQ_IOMUXC_SAI2_TXD0_SAI2_TX_DATA0	0xd6
+				MX8MQ_IOMUXC_SAI2_RXD0_SAI2_RX_DATA0	0xd6
+			>;
+		};
+
+		pinctrl_audio_mclk: audiogrp {
+			fsl,pins = <
+#ifdef CONFIG_ARMSTONEMX8M_SGTL5000_AUDIO_MCLK_CLKO1
 				MX8MQ_IOMUXC_GPIO1_IO14_CCMSRCGPCMIX_CLKO1 0x59
+#else
+			        MX8MQ_IOMUXC_SAI2_MCLK_SAI2_MCLK	0xd6
+#endif
 			>;
 		};
 
