--- a/arch/arm64/configs/fsimx8m_defconfig
+++ b/arch/arm64/configs/fsimx8m_defconfig
@@ -155,6 +155,7 @@ CONFIG_LLC2=y
 CONFIG_BPF_JIT=y
 CONFIG_CAN=y
 CONFIG_CAN_FLEXCAN=y
+CONFIG_CAN_MCP251X=y
 CONFIG_BT=y
 CONFIG_BT_RFCOMM=y
 CONFIG_BT_RFCOMM_TTY=y
@@ -525,6 +526,7 @@ CONFIG_SND_SOC_IMX_CS42888=y
 CONFIG_SND_SOC_IMX_WM8962=y
 CONFIG_SND_SOC_IMX_MICFIL=y
 CONFIG_SND_SOC_IMX_RPMSG=y
+CONFIG_SND_SOC_IMX_SGTL5000=y
 CONFIG_SND_SOC_IMX_MQS=y
 CONFIG_SND_SOC_IMX_SPDIF=y
 CONFIG_SND_SOC_IMX_AMIX=y
