Add support for F&S adp-mipi2lvds1 board with j070wvtc0211 panel
- add device tree support for j070wvtc0211 panel with
  adp-mipi2lvds1 adapter board
- enable bridge driver in fsimx8mm_defconfig for SN65DSI84
  MIPI2LVDS controller
- add support for j070wvtc0211 panel in simple panel
  driver

--- a/arch/arm64/boot/dts/F+S/Makefile
+++ b/arch/arm64/boot/dts/F+S/Makefile
@@ -9,7 +9,8 @@ dtb-$(CONFIG_ARCH_FSL_IMX8MM) += picocoremx8mm.dtb \
 								picocoremx8mm-bbdsi.dtb \
 								picocoremx8mm-lcdif-tc358764-g070y2-l01.dtb \
 								picocoremx8mm-lcdif-tc358764-j070wvtc0211.dtb \
-								picocoremx8mm-lcdif-g050tan01.dtb
+								picocoremx8mm-lcdif-g050tan01.dtb \
+								picocoremx8mm-lcdif-adp-mipi2lvds1-j070wvtc0211-single-display.dtb
 
 dtb-$(CONFIG_ARCH_FSL_IMX8QXP) += efusmx8x.dtb
 
