Add support for MIPI-DSI panel rf3500d-ayw-mng1
- add device tree support for the panel
- add panel driver for MIPI-DSI controller ili9881c
  from Ilitek
- enable panel driver and goodix touch driver gt928
  in the fsimx8mm_defconfig

--- a/arch/arm64/configs/fsimx8mm_defconfig
+++ b/arch/arm64/configs/fsimx8mm_defconfig
@@ -289,6 +289,7 @@ CONFIG_KEYBOARD_GPIO=y
 CONFIG_KEYBOARD_IMX_SC_PWRKEY=y
 CONFIG_KEYBOARD_CROS_EC=y
 CONFIG_INPUT_TOUCHSCREEN=y
+CONFIG_TOUCHSCREEN_GOODIX=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C=y
 CONFIG_TOUCHSCREEN_FTS=y
 CONFIG_TOUCHSCREEN_FTS_DIRECTORY="focaltech_touch"
@@ -489,6 +490,7 @@ CONFIG_DRM_PANEL_SIMPLE=y
 CONFIG_DRM_PANEL_SEIKO_43WVF1G=y
 CONFIG_DRM_PANEL_RAYDIUM_RM67191=y
 CONFIG_DRM_PANEL_NOVATEK_NT35521=y
+CONFIG_DRM_PANEL_ILITEK_ILI9881C=y
 CONFIG_DRM_NXP_SEIKO_43WVFIG=y
 CONFIG_DRM_I2C_ADV7511=y
 CONFIG_DRM_ITE_IT6263=y
