Add support for PicoCoreMX8MX PCB
The PicoCoreMX8MX is the name of the PCB. The main name of the product
is PicoCoreMX8MM.
Variant 3 and 4 are PCB PicoCoreMX8MM
Variant 5 and 6 are PCB PicoCoreMX8MX
At the moment we don´t know how to bring the 2 different variants
together thats why we first check in the device-tree and in the future
we will merge it together.

--- a/arch/arm64/configs/fsimx8mm_defconfig
+++ b/arch/arm64/configs/fsimx8mm_defconfig
@@ -156,6 +156,7 @@ CONFIG_BPF_JIT=y
 CONFIG_CAN=y
 CONFIG_CAN_FLEXCAN=y
 CONFIG_CAN_MCP251X=y
+CONFIG_CAN_MCP25XXFD=y
 CONFIG_BT=y
 CONFIG_BT_RFCOMM=y
 CONFIG_BT_RFCOMM_TTY=y
@@ -212,6 +213,7 @@ CONFIG_BLK_DEV_NVME=m
 CONFIG_SENSORS_FXOS8700=y
 CONFIG_SENSORS_FXAS2100X=y
 CONFIG_SRAM=y
+CONFIG_EEPROM_AT24=y
 CONFIG_EEPROM_AT25=m
 # CONFIG_SCSI_PROC_FS is not set
 CONFIG_BLK_DEV_SD=y
@@ -479,11 +481,12 @@ CONFIG_DRM_RCAR_VSP=y
 CONFIG_DRM_MSM=m
 CONFIG_DRM_TEGRA=m
 CONFIG_DRM_PANEL_SIMPLE=y
+CONFIG_DRM_PANEL_ILITEK_ILI9881C=y
 CONFIG_DRM_PANEL_SEIKO_43WVF1G=y
 CONFIG_DRM_PANEL_RAYDIUM_RM67191=y
 CONFIG_DRM_PANEL_NOVATEK_NT35521=y
-CONFIG_DRM_PANEL_ILITEK_ILI9881C=y
 CONFIG_DRM_NXP_SEIKO_43WVFIG=y
+CONFIG_DRM_TOSHIBA_TC358764=y
 CONFIG_DRM_I2C_ADV7511=y
 CONFIG_DRM_ITE_IT6263=y
 CONFIG_DRM_TI_SN65DSI84=y
@@ -499,7 +502,6 @@ CONFIG_DRM_VC4=m
 CONFIG_DRM_HISI_KIRIN=m
 CONFIG_DRM_MXSFB=y
 CONFIG_DRM_MESON=m
-CONFIG_DRM_TOSHIBA_TC358764=y
 CONFIG_FB_IMX64=y
 CONFIG_FB_IMX64_DEBUG=y
 CONFIG_FB_ARMCLCD=y
@@ -650,6 +652,7 @@ CONFIG_RTC_CLASS=y
 CONFIG_RTC_DRV_MAX77686=y
 CONFIG_RTC_DRV_RK808=m
 CONFIG_RTC_DRV_PCF85063=y
+CONFIG_RTC_DRV_PCF85263=y
 CONFIG_RTC_DRV_S5M=y
 CONFIG_RTC_DRV_DS3232=y
 CONFIG_RTC_DRV_EFI=y
