--- a/arch/arm64/boot/dts/F+S/Makefile
+++ b/arch/arm64/boot/dts/F+S/Makefile
@@ -8,6 +8,7 @@ dtb-$(CONFIG_ARCH_FSL_IMX8QM) += armstonemx8m.dtb \
 								armstonemx8m-dcss-hdmi.dtb
 
 dtb-$(CONFIG_ARCH_FSL_IMX8MM) += picocoremx8mm.dtb \
+								picocoremx8mx.dtb \
 								picocoremx8mm-bbdsi.dtb \
 								picocoremx8mm-lcdif-tc358764-g070y2-l01.dtb \
 								picocoremx8mm-lcdif-tc358764-j070wvtc0211.dtb \
