Add full device-tree support for PicoCOMA7
Rework device-tree and add picocoma7ull dts

--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -527,6 +527,7 @@ dtb-$(CONFIG_SOC_IMX6UL) += \
 	efusa7ul.dtb \
 	picocom1.2.dtb \
 	picocoma7.dtb \
+	picocoma7ull.dtb \
 	picocoremx6ul.dtb \
 	cubea7ul.dtb \
 	cube2.0.dtb \
