Add imx6ul-touchscreen controller support
- The imx6ul has its own internal touchscreen controller (TSC).
Activate it in defconfig.
- The original nxp code used the ipg clock as clock source, which did
not work because the tsc clock never got gated.
Add the tsc clock the clock infrastructure
(which was missing for an unknown reason) and set it as root clock for
TSC

--- a/arch/arm/boot/dts/imx6ull.dtsi
+++ b/arch/arm/boot/dts/imx6ull.dtsi
@@ -447,7 +447,7 @@
 				reg = <0x02040000 0x4000>, <0x0219c000 0x4000>;
 				interrupts = <GIC_SPI 3 IRQ_TYPE_LEVEL_HIGH>,
 					     <GIC_SPI 101 IRQ_TYPE_LEVEL_HIGH>;
-				clocks = <&clks IMX6UL_CLK_IPG>,
+				clocks = <&clks IMX6UL_CLK_TSC>,
 					 <&clks IMX6UL_CLK_ADC2>;
 				clock-names = "tsc", "adc";
 				status = "disabled";
