--- a/arch/arm64/boot/dts/F+S/Makefile
+++ b/arch/arm64/boot/dts/F+S/Makefile
@@ -4,6 +4,7 @@ dtb-$(CONFIG_ARCH_FSL_IMX8QM) += armstonemx8m.dtb \
 								armstonemx8m-dcss-sn65dsi84-g101ice-l01.dtb \
 								armstonemx8m-lcdif-sn65dsi84-g070y2-l01.dtb \
 								armstonemx8m-lcdif-sn65dsi84-g101ice-l01.dtb \
+								armstonemx8m-lcdif-sn65dsi84-g185han01.dtb \
 								armstonemx8m-dcss-hdmi.dtb
 
 dtb-$(CONFIG_ARCH_FSL_IMX8MM) += picocoremx8mm.dtb \
