--- a/arch/arm64/configs/fsimx8m_defconfig
+++ b/arch/arm64/configs/fsimx8m_defconfig
@@ -498,6 +498,7 @@ CONFIG_FB_MXC_DISP_FRAMEWORK=y
 CONFIG_BACKLIGHT_GENERIC=m
 CONFIG_BACKLIGHT_PWM=y
 CONFIG_BACKLIGHT_LP855X=m
+CONFIG_BACKLIGHT_GPIO=y
 CONFIG_FRAMEBUFFER_CONSOLE=y
 CONFIG_LOGO=y
 # CONFIG_LOGO_LINUX_MONO is not set
