--- a/arch/arm64/boot/dts/F+S/armstonemx8m-dcss-sn65dsi84-g101ice-l01.dts
+++ b/arch/arm64/boot/dts/F+S/armstonemx8m-dcss-sn65dsi84-g101ice-l01.dts
@@ -1,16 +1,10 @@
 /*
- * Copyright 2017 NXP
- *
- * This program is free software; you can redistribute it and/or
- * modify it under the terms of the GNU General Public License
- * as published by the Free Software Foundation; either version 2
- * of the License, or (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- */
+* Copyright (C) 2019 F&S Elektronik Systeme GmbH
+*
+* This program is free software; you can redistribute it and/or modify
+* it under the terms of the GNU General Public License version 2 as
+* published by the Free Software Foundation.
+*/
 
 #include "armstonemx8m.dts"
 
@@ -26,27 +20,27 @@
 	disp-dev = "mipi_disp";
 
 	clocks = <&clk IMX8MQ_CLK_DISP_APB_ROOT>,
-		 <&clk IMX8MQ_CLK_DISP_AXI_ROOT>,
-		 <&clk IMX8MQ_CLK_DISP_RTRM_ROOT>,
-		 <&clk IMX8MQ_CLK_DC_PIXEL>,
-		 <&clk IMX8MQ_CLK_DUMMY>,
-		 <&clk IMX8MQ_CLK_DISP_DTRC>;
+	<&clk IMX8MQ_CLK_DISP_AXI_ROOT>,
+	<&clk IMX8MQ_CLK_DISP_RTRM_ROOT>,
+	<&clk IMX8MQ_CLK_DC_PIXEL>,
+	<&clk IMX8MQ_CLK_DUMMY>,
+	<&clk IMX8MQ_CLK_DISP_DTRC>;
 	clock-names = "apb", "axi", "rtrm", "pix_div", "pix_out", "dtrc";
 
 	assigned-clocks = <&clk IMX8MQ_CLK_DC_PIXEL>,
-			  <&clk IMX8MQ_CLK_DISP_AXI>,
-			  <&clk IMX8MQ_CLK_DISP_RTRM>,
-			  <&clk IMX8MQ_VIDEO_PLL1_REF_SEL>,
-			  <&clk IMX8MQ_VIDEO_PLL1>;
+	<&clk IMX8MQ_CLK_DISP_AXI>,
+	<&clk IMX8MQ_CLK_DISP_RTRM>,
+	<&clk IMX8MQ_VIDEO_PLL1_REF_SEL>,
+	<&clk IMX8MQ_VIDEO_PLL1>;
 	assigned-clock-parents = <&clk IMX8MQ_VIDEO_PLL1_OUT>,
-				 <&clk IMX8MQ_SYS1_PLL_800M>,
-				 <&clk IMX8MQ_SYS1_PLL_800M>,
-				 <&clk IMX8MQ_CLK_25M>;
+	<&clk IMX8MQ_SYS1_PLL_800M>,
+	<&clk IMX8MQ_SYS1_PLL_800M>,
+	<&clk IMX8MQ_CLK_25M>;
 	assigned-clock-rates = <600000000>,
-			       <800000000>,
-			       <0>,
-			       <400000000>,
-			       <599999999>;
+	<800000000>,
+	<0>,
+	<400000000>,
+	<599999999>;
 
 	dcss_disp0: port@0 {
 		reg = <0>;
@@ -68,16 +62,16 @@
 	best-match;
 
 	assigned-clocks = <&clk IMX8MQ_CLK_DSI_PHY_REF>,
-			  <&clk IMX8MQ_CLK_DSI_CORE>,
-			  <&clk IMX8MQ_VIDEO_PLL1_REF_SEL>,
-			  <&clk IMX8MQ_VIDEO_PLL1>;
+	<&clk IMX8MQ_CLK_DSI_CORE>,
+	<&clk IMX8MQ_VIDEO_PLL1_REF_SEL>,
+	<&clk IMX8MQ_VIDEO_PLL1>;
 	assigned-clock-parents = <&clk IMX8MQ_VIDEO_PLL1_OUT>,
-				 <&clk IMX8MQ_SYS1_PLL_266M>,
-				 <&clk IMX8MQ_CLK_25M>;
+	<&clk IMX8MQ_SYS1_PLL_266M>,
+	<&clk IMX8MQ_CLK_25M>;
 	assigned-clock-rates = <24000000>,
-			       <266000000>,
-			       <0>,
-			       <599999999>;
+	<266000000>,
+	<0>,
+	<599999999>;
 
 	port@1 {
 		#if 1
@@ -98,7 +92,7 @@
 	panel@0 {
 		reg = <0>;
 		compatible = "innolux,g101ice-l01-dsi"; /* one of panel-simple's
-		     		          match strings */
+		match strings */
 
 		power-supply = <&reg_vlcd>;
 
@@ -150,42 +144,45 @@
 		compatible = "ti,sn65dsi84";
 		#gpio-cells = <2>;
 		enable-gpios = <&gpio5 22 GPIO_ACTIVE_HIGH>; /* <&pinctrl_mipi_dsi_rst>; */
-		sn65dsi84,addresses = <0x09 0x0A 0x0B 0x0D
-		                       0x10 0x11 0x12 0x13
-                               0x18 0x19 0x1A 0x1B
-                               0x20 0x21 0x22 0x23
-                               0x24 0x25 0x26 0x27
-                               0x28 0x29 0x2A 0x2B
-                               0x2C 0x2D 0x2E 0x2F
-                               0x30 0x31 0x32 0x33
-                               0x34 0x35 0x36 0x37
-                               0x38 0x39 0x3A 0x3B
-                               0x3C 0x3D 0x3E
-                               0x0D>;
 
-		sn65dsi84,values = </* reset and clock registers */
-		                    0x00 0x05 0x10 0x00
-                            /* DSI registers */
-		                    0x26 0x00 0x2a 0x00
-		                    /* LVDS registers */
-                            0x78 0x00 0x03 0x00
-                            /* video registers */
-                            /* cha-al-len-l, cha-al-len-h */
-                            0x00 0x05 0x00 0x00
-                            /* cha-v-ds-l, cha-v-ds-h */
-                            0x00 0x00 0x00 0x00
-                            /* cha-sdl, cha-sdh*/
-                            0x21 0x00 0x00 0x00
-                            /* cha-hs-pwl, cha-hs-pwh */
-                            0x01 0x00 0x00 0x00
-                            /* cha-vs-pwl, cha-vs-pwh */
-                            0x01 0x00 0x00 0x00
-                            /*cha-hbp, cha-vbp */
-                            0x4f 0x00 0x00 0x00
-                            /* cha-hfp, cha-vfp*/
-                            0x00 0x00 0x00 0x00
-                            0x00 0x00 0x00
-                            0x01>;
+		sn65dsi84,addresses = <
+		0x09 0x0A 0x0B 0x0D
+		0x10 0x11 0x12 0x13
+                0x18 0x19 0x1A 0x1B
+                0x20 0x21 0x22 0x23
+                0x24 0x25 0x26 0x27
+                0x28 0x29 0x2A 0x2B
+                0x2C 0x2D 0x2E 0x2F
+                0x30 0x31 0x32 0x33
+                0x34 0x35 0x36 0x37
+                0x38 0x39 0x3A 0x3B
+                0x3C 0x3D 0x3E
+                0x0D>;
+
+		sn65dsi84,values = <
+		/* reset and clock registers */
+		0x00 0x05 0x10 0x00
+                /* DSI registers */
+		0x26 0x00 0x2a 0x00
+		/* LVDS registers */
+                0x78 0x00 0x03 0x00
+                /* video registers */
+                /* cha-al-len-l, cha-al-len-h */
+                0x00 0x05 0x00 0x00
+                /* cha-v-ds-l, cha-v-ds-h */
+                0x00 0x00 0x00 0x00
+                /* cha-sdl, cha-sdh*/
+                0x21 0x00 0x00 0x00
+                /* cha-hs-pwl, cha-hs-pwh */
+                0x01 0x00 0x00 0x00
+                /* cha-vs-pwl, cha-vs-pwh */
+                0x01 0x00 0x00 0x00
+                /*cha-hbp, cha-vbp */
+                0x4f 0x00 0x00 0x00
+                /* cha-hfp, cha-vfp*/
+                0x00 0x00 0x00 0x00
+                0x00 0x00 0x00
+                0x01>;
 	};
 };
 
