--- a/arch/arm/boot/dts/picocoremx6sx.dts
+++ b/arch/arm/boot/dts/picocoremx6sx.dts
@@ -47,6 +47,9 @@ lcd_wvga {				\
 	pixelclk-active = <1>;		\
 }
 
+/* GPU is only available on CPU variants MCIMX6X3... and MCIMX6X4... */
+#define CONFIG_PICOCOREMX6SX_GPU
+
 /*
  * Configure touch screen:
  *
@@ -737,6 +740,13 @@ lcd_wvga {				\
 	};
 };
 #endif /* CONFIG_PICOCOREMX6SX_LCDIF0 */
+
+#ifndef CONFIG_PICOCOREMX6SX_GPU
+&gpu {
+	status = "disabled";
+};
+#endif
+
 
 #ifdef CONFIG_PICOCOREMX6SX_UART_A
 /* UART_A implemented by UART1: TXD, RXD only */
